css: update background photo on homepage to not be fixed on mobile, add background color on videos

--- a/src/scss/components/_portrait-video.scss
+++ b/src/scss/components/_portrait-video.scss
@@ -17,6 +17,7 @@
 .portrait-video__content {
   position: relative;
   padding-bottom: percentage(16 / 9);
+  background-color: #000;
 
   img,
   iframe {
