--- a/src/scss/components/_video.scss
+++ b/src/scss/components/_video.scss
@@ -43,6 +43,7 @@
     padding-top: percentage(9 / 16);
     height: 0;
     overflow: hidden;
+    background-color: #000;
 
     iframe,
     img {
